2014-12-22  Andy Buckley  <andy.buckley@cern.ch>

	* Restoring original active set member in LHAGlue metadata get*
	functions which were previously switching focus as a result of
	calling loadMember() to get numerical grid data.

	* Making LHAGlue Fortran interface switch the current set slot
	more coherently (has_photon is the exception).

	* Attempt to use Threshold* metadata keys for Fortran
	getthresholdm_ and old C++ wrapper getThreshold. Not yet fully
	supported in the rest of the system but we may as well pre-empt it
	while editing LHAGlue.cc.

	* Add missing getdescm_ and getdesc_ Fortran functions.

	* Add missing Fortran getdatapath function, cf. LHAPDF5 but with
	colon separators between multiple paths if appropriate.

	* Add Fortran lhapdf_getpdfsetlist function, returning the list of
	available PDF sets as a space-separated string. Note the lhapdf_
	prefix -- this is the intended 'namespace' form for a new Fortran
	interface at some point.

2014-12-18  Andy Buckley  <andy.buckley@cern.ch>

	* Remove obsolete config flags from lhapdf.conf

	* examples/compatibility.cc: Simplify compatibility macro checking.

2014-10-29  Andy Buckley  <andy.buckley@cern.ch>

	* Add parsing and use of the internal PID data line in GridPDF.cc,
	in preference to the PDF::flavors() method. This fixes a bug,
	since flavors() was sorting the list, meaning that data files
	without monotonically sorted PID columns would wrongly assign PDFs
	to PIDs.

2014-10-08  Graeme Watt  <graeme.watt@durham.ac.uk>

	* Added new ContinuationExtrapolator to provide same extrapolation
	as in the MSTW standalone code (and LHAPDF5 when using MSTW sets).

2014-10-03  Andy Buckley  <andy.buckley@cern.ch>

	* Better code organisation and protection against out-of-bounds
	array accesses in log-bicubic interpolator.

2014-08-28  Graeme Watt  <graeme.watt@durham.ac.uk>

	* Fallback to bilinear interpolator if using bicubic
	interpolator with only 2 or 3 Q2 knots in a subgrid.
