@@ -1,5 +1,9 @@
 2014-12-22  Andy Buckley  <andy.buckley@cern.ch>
 
+	* Better error handling in PDF index lookup, including clearer
+	reporting of set-unmatched PDF IDs and member numbers which are
+	out of range for a valid set.
+
 	* Restoring original active set member in LHAGlue metadata get*
 	functions which were previously switching focus as a result of
 	calling loadMember() to get numerical grid data.
